# Firefighting_Robot_Arm

./: README.md  README_hdt_adroit.md
control/: CMakeLists.txt  README.md  package.xml
control/launch/: fire_fight.launch  hdt_arm_bringup.launch  realsense.launch  (+1 more)
hdt_6dof_a24_pincer_bringup/: CMakeLists.txt  package.xml
hdt_6dof_a24_pincer_description/: CMakeLists.txt  package.xml
hdt_6dof_a24_pincer_moveit/: .setup_assistant  CMakeLists.txt  package.xml
hdt_6dof_a24_pincer_moveit_dual/: .setup_assistant  CMakeLists.txt  package.xml
hdt_6dof_a24_pincer_moveit_dual/config/: fake_controllers.yaml  hdt_arm.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
hdt_6dof_a24_pincer_moveit_dual/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hdt_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hdt_adroit_control/: CMakeLists.txt  package.xml
hdt_adroit_debug/: CMakeLists.txt  package.xml  plugin.xml  setup.py
hdt_generic_joystick/: CMakeLists.txt  package.xml
hdt_spacenav_extras/: CMakeLists.txt  package.xml
pcl_processing/: CMakeLists.txt  package.xml
thermal_image_processing/: CMakeLists.txt  README.md  package.xml
(+111 files in other folders)
